[package]
name = "event-loop-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["async"] }
tokio = { version = "1", features = ["full" ] }

[[bench]]
name = "tcp_udp_benchmarks"
harness = false
